# pytest-renpy

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: discovered-bugs.md
docs/investigations/: 2026-05-07-renpy-call-and-mid-label-yields.md
docs/plans/: 2026-05-06-001-feat-layer1-mock-unit-testing-plan.md  2026-05-06-002-feat-layer2-label-flow-integration-plan.md  2026-05-07-001-fix-call-stack-yield-handling-plan.md  2026-05-07-002-feat-kid-king-full-coverage-plan.md  layer1-mock-unit-testing.md  layer2-label-flow-integration.md
examples/forests-bane/: test_bekri_flow.py
examples/kid-and-king/: conftest.py  test_kid_and_king.py  test_kidking_flow.py
examples/minimum-viable-rpg/: conftest.py  test_rpg.py  test_rpg_flow.py
examples/terminalgame/: conftest.py  test_commands.py  test_game_flow.py  test_terminalgame_flow.py
spike/: README.md  call_stack_spike.py  call_stack_spike_findings.md  driver.py
spike/fixture_game/: log.txt  traceback.txt
spike/fixture_game/game/: _test_harness.rpy  _test_harness.rpyc  script.rpy  script.rpyc
spike/fixture_game/game/cache/: bytecode-39.rpyb  py3analysis.rpyb  screens.rpyb
src/pytest_renpy/: __init__.py  fixtures.py  loader.py  plugin.py  rpy_parser.py
src/pytest_renpy/engine/: __init__.py  _test_harness.rpy  ipc.py  protocol.py  runner.py
src/pytest_renpy/mock_renpy/: __init__.py  config.py  display.py  exports.py  persistent.py  random.py  store.py
tests/: conftest.py  test_engine.py  test_fixtures.py  test_ipc.py  test_loader.py  test_mock_renpy.py  test_plugin.py  test_rpy_parser.py
(+1 files in other folders)
